# pgjs-recognizer

./: .editorconfig  .gitignore  CMakeLists.txt  license  license.md  package.json  readme.md
Debug/: makefile  objects.mk
Debug/src/: ALPRHandler.d  PlateRecognitionServer.d  QueueHandler.d  subdir.mk
config/: default.json
src/: ALPRHandler.cpp  PlateRecognitionServer.cpp  QueueHandler.cpp  config  controller.js  index.js  logger.js  recognizer.js  redis.js
src/include/: ALPRHandler.h  MessageHandler.h  Properties.h  QueueHandler.h
